--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,9 +5,13 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="18"
         android:targetSdkVersion="19" />
     <uses-permission android:name="android.permission.INTERNET" />
+          <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+          <uses-permission android:name="android.permission.READ_INTERNAL_STORAGE" />
+          <uses-permission android:name="android.permission.WAKE_LOCK" />
+          
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
